- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.5.0
 - 
    None
 
- 
        I0883eaa2438fd27455da93f78f392ea3c1abe6b8
 
Qt5 applications do not enable IBus when the applications are saved in the session and launched automatically in the next login.
To reproduce:
1. Log into KDE plasma 5.
2. Configure ibus-daemon to run automatically when the user log into the session.
E.g. im-chooser is available in Fedora.
3. Confirm konsole works with QT_IM_MODULE=ibus.
4. Do not exit konsole but log out the session to save konsole in the session.
5. Log into the KDE again.
konsole runs automatically and ibus-daemon runs automatically but konsole does not enable ibus while QT_IM_MODULE=ibus is set correctly.